// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for default props 1`] = `
<div
  aria-label="Bean"
  class="css-view-1dbjc4n"
  style="flex-basis: auto; overflow-x: hidden; overflow-y: hidden; z-index: 0;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgba(0, 0, 0, 0); background-position: center; background-repeat: no-repeat; background-size: cover; bottom: 0px; height: 100%; left: 0px; position: absolute; right: 0px; top: 0px; width: 100%; z-index: -1; background-image: url(test.png);"
  />
  <img
    alt="Bean"
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="test.png"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  aria-label="bean"
  class="css-view-1dbjc4n"
  style="flex-basis: auto; overflow-x: hidden; overflow-y: hidden; z-index: 0;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgba(0, 0, 0, 0); background-position: center; background-repeat: no-repeat; background-size: cover; bottom: 0px; height: 100%; left: 0px; position: absolute; right: 0px; top: 0px; width: 100%; z-index: -1; background-image: url(test.png);"
  />
  <img
    alt="bean"
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="test.png"
  />
</div>
`;

exports[`props should render correctly for fit contain 1`] = `
<div
  aria-label="Bean"
  class="css-view-1dbjc4n"
  style="flex-basis: auto; overflow-x: hidden; overflow-y: hidden; z-index: 0;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgba(0, 0, 0, 0); background-position: center; background-repeat: no-repeat; background-size: contain; bottom: 0px; height: 100%; left: 0px; position: absolute; right: 0px; top: 0px; width: 100%; z-index: -1; background-image: url(test.png);"
  />
  <img
    alt="Bean"
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="test.png"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  aria-label="Bean"
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); flex-basis: auto; overflow-x: hidden; overflow-y: hidden; z-index: 0;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgba(0, 0, 0, 0); background-position: center; background-repeat: no-repeat; background-size: cover; bottom: 0px; height: 100%; left: 0px; position: absolute; right: 0px; top: 0px; width: 100%; z-index: -1; background-image: url(test.png);"
  />
  <img
    alt="Bean"
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="test.png"
  />
</div>
`;

exports[`theming Image.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); flex-basis: auto; overflow-x: hidden; overflow-y: hidden; z-index: 0;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgba(0, 0, 0, 0); background-position: center; background-repeat: no-repeat; background-size: cover; bottom: 0px; height: 100%; left: 0px; position: absolute; right: 0px; top: 0px; width: 100%; z-index: -1; background-image: url(test.png);"
  />
  <img
    alt=""
    class="css-accessibilityImage-9pa8cd"
    draggable="false"
    src="test.png"
  />
</div>
`;
